# Avatar_Robotics_Challenge

./: README.md
avatar_challenge/: CMakeLists.txt  package.xml
avatar_challenge/scripts/: shapes.json  simple_arm_mover.py
